--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,15 @@
     <artifactId>spring-boot-starter-data-jpa</artifactId>
   </dependency>
 		
+		
+		
+		<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+<dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+   </dependency>
+
+		
 	</dependencies>
 
 
